fixed layout on mobile

--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ button {
     color: white;
 }
 
-@media (max-width:1100px){
+@media (max-width:900px){
     
     body{
-        margin-top: 50 %;
+        margin-top: 50%;
     }: 
 }
 
